--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
     background:#222;color:#fff;padding:30px;
     margin:30px auto;max-width:800px;border-radius:12px;
   }
+  .about a{
+    display:inline-block;margin-top:15px;
+    background:#fff;color:#000;font-weight:bold;
+    padding:12px 24px;border-radius:8px;
+    text-decoration:none;transition:all .2s;
+  }
+  .about a:hover{background:#ff0;color:#000;}
   .videos{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;max-width:1200px;margin:0 auto 50px;}
   .video{position:relative;}
   .video iframe{width:100%;height:200px;border:none;border-radius:12px;}
@@ -72,6 +79,7 @@
   <div class="about">
     <p><b>About prityaa379:</b> A creative soul dropping music, vlogs, and savage roasts. This portal is just the start of something huge.</p>
     <p>Stick around for wild vibes, raw energy, and content that’s both entertaining and unfiltered. 🚀</p>
+    <a href="https://meet.google.com/ptx-kfrp-zrt" target="_blank">🎥 See how I shoot content (Join Live)</a>
   </div>
 
   <!-- videos -->
